--- a/RDEvent/Views/Events/AddEvents.cshtml
+++ b/RDEvent/Views/Events/AddEvents.cshtml
@@ -14,41 +14,77 @@
     @Html.TextBox("Event Name", null, new { @class = "form-contal" })
     @Html.ValidationMessage("Event Name", "", new { @class = "text-danger" })
     <br />
-    
+
 
     <p> @Html.Label("Region", "Region:")</p>
-    @Html.TextBox("Region", null, new { @class = "form-contal" })
+    @Html.DropDownList("Region", new List<SelectListItem>
+   {
+new SelectListItem {Text ="BOP",Value="1"},
+new SelectListItem {Text ="Central 1",Value="2"},
+new SelectListItem {Text ="Central 2",Value="3"},
+new SelectListItem {Text ="Northern",Value="4"},
+new SelectListItem {Text ="Southern 1",Value="5"},
+new SelectListItem {Text ="Southern 2",Value="6"},
+new SelectListItem {Text ="Wellington",Value="7"},
+
+   }, "Select the Region")
+
+
     @Html.ValidationMessage("Region", "", new { @class = "text-danger" })
     <br />
-    
+    <br />
 
     <p> @Html.Label("Description", "Description:")</p>
     @Html.TextBox("Description", null, new { @class = "form-contal" })
     @Html.ValidationMessage("Description", "", new { @class = "text-danger" })
     <br />
-    
+
 
     <p> @Html.Label("Date", "Date:")</p>
     @Html.TextBox("Date", null, new { @class = "form-contal" })
     @Html.ValidationMessage("Date", "", new { @class = "text-danger" })
     <br />
-    
 
-    <p> @Html.Label("Date", "City:")</p>
-    @Html.TextBox("City", null, new { @class = "form-contal" })
+
+    <p> @Html.Label("City", "City:")</p>
+    @Html.DropDownList("City", new List<SelectListItem>
+   {
+new SelectListItem {Text ="Auckland",Value="1"},
+new SelectListItem {Text ="Christchurch",Value="2"},
+new SelectListItem {Text ="Dunedin",Value="3"},
+new SelectListItem {Text ="Hamilton",Value="4"},
+new SelectListItem {Text ="Kapiti",Value="5"},
+new SelectListItem {Text ="Levin",Value="6"},
+new SelectListItem {Text ="Nelson",Value="7"},
+new SelectListItem {Text ="Napier",Value="8"},
+new SelectListItem {Text ="NewPlymouth",Value="9"},
+new SelectListItem {Text ="Palmerston North",Value="10"},
+new SelectListItem {Text ="Queenstown",Value="11"},
+new SelectListItem {Text ="Rotorua",Value="12"},
+new SelectListItem {Text ="Timaru",Value="13"},
+new SelectListItem {Text ="Taupo",Value="14"},
+new SelectListItem {Text ="Tauranga",Value="15"},
+new SelectListItem {Text ="UpperHutt",Value="16"},
+new SelectListItem {Text ="Wellington",Value="17"},
+new SelectListItem {Text ="Whakatane",Value="18"},
+new SelectListItem {Text ="Wanganui",Value="19"},
+new SelectListItem {Text ="Whangarei",Value="20"},
+
+   }, "Select the City")
+
     @Html.ValidationMessage("City", "", new { @class = "text-danger" })
     <br />
-    
+    <br />
     <p> @Html.Label("Type of Event", "Type of Event:")</p>
     @Html.TextBox("Type of Event", null, new { @class = "form-contal" })
     @Html.ValidationMessage("Type of Event", "", new { @class = "text-danger" })
     <br />
-    
-    <p> @Html.Label("Number of officials needed", "City:")</p>
+
+    <p> @Html.Label("Number of officials needed", "Number of officials needed:")</p>
     @Html.TextBox("Number of officials needed", null, new { @class = "form-contal" })
     @Html.ValidationMessage("Number of officials needed", "", new { @class = "text-danger" })
     <br />
-    
+
 
     <center>
         <p> <a href="~/Events/AdminEvents/"> <div class="button"><center>Submit</center>  </div> </a></p>
@@ -69,7 +105,7 @@
 
         /* Full-width input fields */
         .form-contal, text-danger {
-            width: 40%;
+            width: 30%;
             padding: 15px;
             margin: 5px 0 22px 0;
             display: inline-block;
@@ -106,7 +142,7 @@
 
         /* Add a blue text color to links */
         a {
-            color:white;
+            color: white;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
