--- a/RDEvent/Views/Events/AdminEvents.cshtml
+++ b/RDEvent/Views/Events/AdminEvents.cshtml
@@ -3,10 +3,11 @@
     ViewBag.Title = "AdminEvents";
 }
 
-<html>
+
 <center>
     <h1 Style="background-color: black;color:pink;"> Add Events </h1>
 </center>
+<html>
 <body>
    
 
@@ -19,7 +20,14 @@
         Emralds Men vs Rubbies Men . Auckland . Region1
     </p>
     <a href="/Events/EditEvent/" class="site-btn"> Edit Event</a>
-    
+    <section>
+        <div class="col-lg-16 col-md-16">
+            
+           <center>     <a href="/Events/AddEvents" class="primary1-btn">Add Events</a>
+            </center>
+        </div>
+    </section>
+  
 </body>
 </html>
 
