--- a/RDEvent/Views/Login/Admin.cshtml
+++ b/RDEvent/Views/Login/Admin.cshtml
@@ -11,30 +11,32 @@
 
     <br />
     <br />
-    <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
-        <br />
-        <br />
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-        <br />
-        <br />
-        <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
 
-        <br />
+    <center>
+        <div class="container">
+            <label for="uname"><b>Username</b></label>&nbsp;
+            <input type="text" placeholder="Enter Username" name="uname" required>
+            <br />
+            <br />
+            <label for="psw"><b>Password</b></label>&nbsp;
+            <input type="password" placeholder="Enter Password" name="psw" required>
+            <br />
+            <br />
+            <label>
+                <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+    </center>
+    <br />
     </div>
 
     <center>
-        <p> <a href="~/Home/Admin"> <div class="button"><center>Login</center>  </div> </a></p>
+        <p> <a href="~/Home/Admin"> <div class="loginbtn"><center>Login</center>  </div> </a></p>
     </center>
-
+   
 
     <br />
     <center>
-        <p> Continue with <a href="https://www.google.com/account/about/"> Google</a> <br /></p>
+        <p> Continue with <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"> Google</a> <br /></p>
     </center>
 
     <style>
@@ -49,7 +51,7 @@
 
         /* Full-width input fields */
         input[type=text], input[type=password] {
-            width: 100%;
+            width: 30%;
             padding: 15px;
             margin: 5px 0 22px 0;
             display: inline-block;
@@ -76,7 +78,7 @@
             margin: 8px 0;
             border: none;
             cursor: pointer;
-            width: 100%;
+            width: 20%;
             opacity: 0.9;
         }
 
