--- a/RDEvent/Views/Login/ForgotCode.cshtml
+++ b/RDEvent/Views/Login/ForgotCode.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "verification";
+﻿
+@{
+    ViewBag.Title = "ForgotCode";
 }
 
 <html>
@@ -18,7 +19,7 @@
         <br />
         <br />
     </center>
-    <p> <a href="~/Register/verified"><center> <div class="button"> Next </div></center> </a> <br /></p>
+    <p> <a href="/Login/NewPassword/"><center> <div class="button"> Sign Up </div></center> </a> <br /></p>
 
     <br />
     <style>
@@ -82,3 +83,4 @@
 
 </body>
 </html>
+
