--- a/RDEvent/Views/Login/ForgotPassword.cshtml
+++ b/RDEvent/Views/Login/ForgotPassword.cshtml
@@ -1,29 +1,36 @@
-﻿@{
-    ViewBag.Title = "verification";
+﻿
+@{
+    ViewBag.Title = "ForgotPassword";
 }
 
 <html>
 <center>
-    <h1 Style="background-color: black;color:pink;"> Verify Email </h1>
+    <h1 Style="background-color: black;color:pink;"> Forgot Password </h1>
 </center>
 <body>
-    <center>
-        <br />
-        <br />
-        <p> We sent you a code to verify your Email</p>
-        <br />
-        <br />
-        <label for="Code"><b>code</b></label>
-        &nbsp;<input type="text" placeholder="Enter your code" name="Code" required>
-        <br />
-        <br />
-    </center>
-    <p> <a href="~/Register/verified"><center> <div class="button"> Next </div></center> </a> <br /></p>
+
 
     <br />
+    <br />
+
+    <center>
+        <div class="container">
+            <label for="uname"><b>Email</b></label>&nbsp;
+            <input type="text" placeholder="Enter Email" name="FEmail" required>
+            <br />
+            <br />
+            
+    </div>
+
+    <center>
+        <p> <a href="/Login/ForgotCode/"> <div class="loginbtn"><center></center>Sent Code  </div> </a></p>
+    </center>
+   
+    <br />
+    
     <style>
         * {
-            box-sizing: border-box;
+            box-sizing: border-box
         }
 
         /* Add padding to containers */
@@ -53,7 +60,7 @@
         }
 
         /* Set a style for the submit/register button */
-        .button {
+        .loginbtn {
             background-color: #000000;
             color: white;
             padding: 16px 20px;
@@ -64,13 +71,13 @@
             opacity: 0.9;
         }
 
-            .button:hover {
+            .loginbtn:hover {
                 opacity: 1;
             }
 
         /* Add a blue text color to links */
-        .a {
-            color: white;
+        a {
+            color: dodgerblue;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
@@ -79,6 +86,5 @@
             text-align: center;
         }
     </style>
-
 </body>
 </html>
