--- a/RDEvent/Views/Login/NewPassword.cshtml
+++ b/RDEvent/Views/Login/NewPassword.cshtml
@@ -1,26 +1,42 @@
-﻿@{
-    ViewBag.Title = "verification";
+﻿
+@{
+    ViewBag.Title = "NewPassword";
 }
+
 
 <html>
 <center>
-    <h1 Style="background-color: black;color:pink;"> Verify Email </h1>
+    <h1 Style="background-color: black;color:pink;"> Change Password </h1>
 </center>
 <body>
-    <center>
-        <br />
-        <br />
-        <p> We sent you a code to verify your Email</p>
-        <br />
-        <br />
-        <label for="Code"><b>code</b></label>
-        &nbsp;<input type="text" placeholder="Enter your code" name="Code" required>
-        <br />
-        <br />
-    </center>
-    <p> <a href="~/Register/verified"><center> <div class="button"> Next </div></center> </a> <br /></p>
+
 
     <br />
+    <br />
+    <center>
+        <div class="container">
+           
+            <label for="psw"><b>New Password</b></label>&nbsp;
+            &nbsp;<input type="password" placeholder="Enter Password" name="psw" required>
+            <br />
+            <br />
+            <label for="psw"><b>Repeat Password</b></label>&nbsp;
+            &nbsp;<input type="password" placeholder="Repeat your Password" name="psw" required>
+            <br />
+            <br />
+        </div>
+        
+        <br />
+    </center>
+
+    <center>
+        <p> <a href="/Login/Index/"> <div class="button"><center>Submit</center>  </div> </a></p>
+
+
+      
+
+      
+    </p><br />
     <style>
         * {
             box-sizing: border-box;
@@ -69,8 +85,8 @@
             }
 
         /* Add a blue text color to links */
-        .a {
-            color: white;
+        a {
+            color: dodgerblue;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
@@ -82,3 +98,6 @@
 
 </body>
 </html>
+
+
+
