--- a/RDEvent/Views/Home/Index.cshtml
+++ b/RDEvent/Views/Home/Index.cshtml
@@ -9,39 +9,36 @@
 
 
 
-    
-<body>
-    <section class="background-image">
-        <div class="bg-image img1"></div>
-        <div class="bg-image img2"></div>
 
-        <div class="bg-text"></div>
-    </section>
+
+<body>
    
     <section class="Events">
         <div class="container">
             <div class="row">
+
                 <div class="col-lg-6">
+
                     <div class="column-sm-2 ">
                         <a href="/Register/Index">
-                            <img src="~/Content/Images/Register.jpg" style="width:20%">
+                            <img src="~/Content/Images/Register.jpg" style="width:30%">
                         </a>
                         <a href="/Login/Index">
-                            <img src="~/Content/Images/Userlogin.jpg" style="width:20%">
+                            <img src="~/Content/Images/Userlogin.jpg" style="width:30%">
                         </a>
                         <a href="/Login/Admin">
-                            <img src="~/Content/Images/Adminlogin.png" style="width:20%">
+                            <img src="~/Content/Images/Adminlogin.png" style="width:30%">
                         </a>
                     </div>
                     <div class="column-sm-2">
                         <a href="/Events/Index">
-                            <img src="~/Content/Images/Events.jpg" style="width:25%">
+                            <img src="~/Content/Images/Events.jpg" style="width:35%">
                         </a>
                         <a href="/News/Index">
-                            <img src="~/Content/Images/News.png" style="width:20%">
+                            <img src="~/Content/Images/News.png" style="width:30%">
                         </a>
                         <a href="https://www.google.com/maps/search/?api=1&parameters">
-                            <img src="~/Content/Images/Maps.png" style="width:15%">
+                            <img src="~/Content/Images/Maps.png" style="width:25%">
                         </a>
                     </div>
 
@@ -59,84 +56,14 @@
                         <p>
                             Game 1  . Auckland   . Region1
                         </p>
-                        <a href="#" class="primary-btn">Register</a>
+                        <a href="/Register/Index/" class="primary-btn">Register</a>
 
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="gallery">
-        <div class="slideshow-container">
 
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext">1 / 4</div>
-                <img src="~/Content/Images/Gallery1.jpg" style="width:100%">
-                <div class="text">R1</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">2 / 4</div>
-                <img src="~/Content/Images/Gallery2.jpg" style="width:100%">
-                <div class="text">R2</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 4</div>
-                <img src="~/Content/Images/Gallery3.jpg" style="width:100%">
-                <div class="text">R3</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext">3 / 4</div>
-                <img src="~/Content/Images/Gallery4.jpg" style="width:100%">
-                <div class="text">R4</div>
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-        <br>
-
-        <!-- The dots/circles -->
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-
-        </div>
-    </section>
-
-    <script>
-        var slideIndex = 1;
-        showSlides(slideIndex);
-
-        function plusSlides(n) {
-            showSlides(slideIndex += n);
-        }
-
-        function currentSlide(n) {
-            showSlides(slideIndex = n);
-        }
-
-        function showSlides(n) {
-            var i;
-            var slides = document.getElementsByClassName("mySlides");
-            var dots = document.getElementsByClassName("dot");
-            if (n > slides.length) { slideIndex = 1 }
-            if (n < 1) { slideIndex = slides.length }
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-            }
-            for (i = 0; i < dots.length; i++) {
-                dots[i].className = dots[i].className.replace(" active", "");
-            }
-            slides[slideIndex - 1].style.display = "block";
-            dots[slideIndex - 1].className += " active";
-        }
-    </script>
 
 </body>
 
@@ -160,8 +87,8 @@
         padding: 10px;
     }
 
-        .column-md-2 img {
-            margin-top: 12px;
+        .column-sm-2 img {
+            margin-top: 120px;
         }
 
     /* Clear floats after the columns */
