--- a/RDEvent/Views/Home/Users.cshtml
+++ b/RDEvent/Views/Home/Users.cshtml
@@ -17,9 +17,9 @@
 
             <div class="header-link-right">
                
-                <a href="~/Profile/Index"><i></i>Update Profile</a>
+                <a href="~/Profile/Index" class="site-btn"><i></i>Update Profile</a>
                 &nbsp;&nbsp;
-                <a href="~/Home/Index"><i></i>Logout</a>
+                <a href="~/Home/Index"  class="site-btn"><i></i>Logout</a>
 
             </div>
         </div>
@@ -32,13 +32,13 @@
                 <div class="col-lg-6">
                     <div class="column-sm-2">
                         <a href="/Events/Index">
-                            <img src="~/Content/Images/Events.jpg" style="width:25%">
+                            <img src="~/Content/Images/Events.jpg" style="width:35%">
                         </a>
                         <a href="/News/Index">
-                            <img src="~/Content/Images/News.png" style="width:20%">
+                            <img src="~/Content/Images/News.png" style="width:25%">
                         </a>
                         <a href="https://www.google.com/maps/search/?api=1&parameters">
-                            <img src="~/Content/Images/Maps.png" style="width:15%">
+                            <img src="~/Content/Images/Maps.png" style="width:25%">
                         </a>
                     </div>
 
@@ -82,81 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="gallery">
-        <div class="slideshow-container">
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <div class="numbertext"> 1 / 4</div>
-                <img src="~/Content/Images/Gallery1.jpg" style="width:100%">
-                <div class="text"> R1</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext"> 2 / 4</div>
-                <img src="~/Content/Images/Gallery2.jpg" style="width:100%">
-                <div class="text"> R2</div>
-            </div>
-
-            <div class="mySlides fade">
-                <div class="numbertext"> 3 / 4</div>
-                <img src="~/Content/Images/Gallery3.jpg" style="width:100%">
-                <div class="text"> R3</div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext"> 4 / 4</div>
-                <img src="~/Content/Images/Gallery4.jpg" style="width:100%">
-                <div class="text"> R4</div>
-            </div>
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)"> &#10094;</a>
-            <a class="next" onclick="plusSlides(1)"> &#10095;</a>
-        </div>
-        <br>
-        <!-- The dots/circles -->
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"> </span>
-            <span class="dot" onclick="currentSlide(2)"> </span>
-            <span class="dot" onclick="currentSlide(3)"> </span>
-            <span class="dot" onclick="currentSlide(4)"> </span>
-            <script>
-                var slideIndex = 1;
-                showSlides(slideIndex);
-
-                function plusSlides(n) {
-                    showSlides(slideIndex += n);
-                }
-
-                function currentSlide(n) {
-                    showSlides(slideIndex = n);
-                }
-
-                function showSlides(n) {
-                    var i;
-                    var slides = document.getElementsByClassName("mySlides");
-                    var dots = document.getElementsByClassName("dot");
-                    if (n > slides.length) {
-                        slideIndex = 1
-                    }
-
-                    if (n < 1) {
-                        slideIndex = slides.length
-                    }
-
-                    for (i = 0; i < slides.length; i++) {
-                        slides[i].style.display = "none";
-                    }
-
-                    for (i = 0; i < dots.length; i++) {
-                        dots[i].className = dots[i].className.replace(" active", "");
-                    }
-
-                    slides[slideIndex - 1].style.display = "block";
-                    dots[slideIndex - 1].className += " active";
-                }
-
-            </script>
-        </div>
-    </section>
+   
 </body>
 
 </html>
@@ -196,7 +122,10 @@
         clear: both;
     }
 
-   
+   .column-sm-2 img {
+            margin-top: 120px;
+        }
+
     * {
         box-sizing: border-box
     }
