--- a/RDEvent/Views/Profile/Index.cshtml
+++ b/RDEvent/Views/Profile/Index.cshtml
@@ -3,40 +3,45 @@
     <h1 Style="background-color: black;color:pink;"> Profile </h1>
 </center>
 <body>
-    
-    <p align="Justify">
+    <div class="container"
+         align="Justify">
         <h2> Enter your details </h2>
         <br />
         <label for="Fname"><b>FirstName</b></label>
-        &nbsp;<input type="text" placeholder="Enter your FirstName" name="FirstName" required>
+        &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your FirstName" name="FirstName" required>
         &nbsp;&nbsp;
         <label for="Lname"><b>LastName</b></label>
         &nbsp;<input type="text" placeholder="Enter your FirstName" name="LastName" required>
         <br />
         <br />
         <label for="Street"><b>Street</b></label>
-        &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your Street">
-        &nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your Street">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         <label for="No"><b>No</b></label>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your No">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your No">
         <br />
         <br />
         <label for="City"><b>City</b></label>
-        &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your city">
-        &nbsp; &nbsp;
+        &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your city">
+        &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
         <label for="Postal"><b>Postal</b></label>
-        &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your Postal">
+         ;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter your Postal">
         <br />
         <br />
-        &nbsp;&nbsp; <label for="PhoneNumber"><b>PhoneNumber*</b></label>
+         <label for="PhoneNumber"><b>PhoneNumber*</b></label>
         &nbsp;<input type="text" placeholder="Enter your PhoneNumber" name="PhoneNumber" required>
 
         <br />
         <br />
-
-        <h4 Style="color:White;"> <a href="/Profile/Experience"><center> <div class="button"> Next  </div></center> </a> <br /></h4>
-    </p>
-    
+        <p>
+            <strong>If you are a Non-Skating Official!</strong><a href="/Profile/NonSkating">Click Here</a>.
+        </p><br />
+        <p>
+            <strong>If You are a Skating Official!</strong>Go Next <center>
+                <a Style="color:White;"> <a href="/Profile/Experience"><div class="button"> Next  </div> </a> <br /></a>
+            </center>
+        </p>
+    </div>
     <style>
         * {
             box-sizing: border-box;
@@ -49,7 +54,7 @@
 
         /* Full-width input fields */
         input[type=text], input[type=password] {
-            width: 40%;
+            width: 30%;
             padding: 15px;
             margin: 5px 0 22px 0;
             display: inline-block;
@@ -76,7 +81,7 @@
             margin: 8px 0;
             border: none;
             cursor: pointer;
-            width: 100%;
+            width: 20%;
             opacity: 0.9;
         }
 
@@ -86,7 +91,7 @@
 
         /* Add a blue text color to links */
         a {
-            color: white;
+            color: dodgerblue;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
